// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoneybadgerDrop Page Renders correctly with connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-115"
        >
          <div
            class="makeStyles-headerContent-116"
          >
            <h6
              class="MuiTypography-root-117 MuiTypography-h6-127 MuiTypography-colorTextPrimary-142"
            >
              DIAMOND HANDS
            </h6>
            <p
              class="MuiTypography-root-117 MuiTypography-body2-118 MuiTypography-colorTextSecondary-143"
            >
              MEME Honeypot pt. II
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-148 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-152 makeStyles-mainPapers-149 MuiPaper-elevation0-155 MuiPaper-rounded-153"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-117 MuiTypography-body1-119"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-117 MuiTypography-h5-126"
                  >
                    <span
                      class="MuiSkeleton-root-180 MuiSkeleton-text-181 makeStyles-center-147 MuiSkeleton-pulse-184"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-117 MuiTypography-subtitle1-128"
                  >
                    <span
                      class="MuiSkeleton-root-180 MuiSkeleton-text-181 makeStyles-center-147 MuiSkeleton-pulse-184"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-117 MuiTypography-subtitle1-128"
                  >
                    <span
                      class="MuiSkeleton-root-180 MuiSkeleton-text-181 makeStyles-center-147 MuiSkeleton-pulse-184"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-220 MuiButton-root-191 MuiButton-text-193 makeStyles-learnMore-151 MuiButton-textPrimary-194 MuiButton-textSizeSmall-206 MuiButton-sizeSmall-212 MuiButton-fullWidth-214"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-192"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-227"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-224 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-117 MuiTypography-body1-119"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-225 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-180 MuiSkeleton-rect-182 makeStyles-nftSkeleton-226 MuiSkeleton-pulse-184"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-225 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-180 MuiSkeleton-rect-182 makeStyles-nftSkeleton-226 MuiSkeleton-pulse-184"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-225 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-180 MuiSkeleton-rect-182 makeStyles-nftSkeleton-226 MuiSkeleton-pulse-184"
                style="width: 100%; height: 450px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly with connected address and a balance of NFTs 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-115"
        >
          <div
            class="makeStyles-headerContent-116"
          >
            <h6
              class="MuiTypography-root-117 MuiTypography-h6-127 MuiTypography-colorTextPrimary-142"
            >
              DIAMOND HANDS
            </h6>
            <p
              class="MuiTypography-root-117 MuiTypography-body2-118 MuiTypography-colorTextSecondary-143"
            >
              MEME Honeypot pt. II
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-148 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-152 makeStyles-mainPapers-149 MuiPaper-elevation0-155 MuiPaper-rounded-153"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-117 MuiTypography-body1-119"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-117 MuiTypography-h5-126"
                  >
                    <span
                      class="MuiSkeleton-root-180 MuiSkeleton-text-181 makeStyles-center-147 MuiSkeleton-pulse-184"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-117 MuiTypography-subtitle1-128"
                  >
                    <span
                      class="MuiSkeleton-root-180 MuiSkeleton-text-181 makeStyles-center-147 MuiSkeleton-pulse-184"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-117 MuiTypography-subtitle1-128"
                  >
                    <span
                      class="MuiSkeleton-root-180 MuiSkeleton-text-181 makeStyles-center-147 MuiSkeleton-pulse-184"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-220 MuiButton-root-191 MuiButton-text-193 makeStyles-learnMore-151 MuiButton-textPrimary-194 MuiButton-textSizeSmall-206 MuiButton-sizeSmall-212 MuiButton-fullWidth-214"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-192"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-247"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-224 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-117 MuiTypography-body1-119"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-225 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <div
                class="MuiPaper-root-152 makeStyles-paper-227 MuiPaper-elevation0-155 MuiPaper-rounded-153"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
                >
                  <div
                    class="MuiGrid-root-10 makeStyles-textCenter-229 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                  >
                    <video
                      autoplay=""
                      class="makeStyles-nftImage-232"
                      loop=""
                      playsinline=""
                      preload="auto"
                      src="test.com"
                    />
                  </div>
                  <div
                    class="MuiGrid-root-10 makeStyles-statsContainer-235 MuiGrid-container-11 MuiGrid-item-12"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-236 makeStyles-soundIcon-234"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
                      />
                    </svg>
                    <div
                      class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                    >
                      <p
                        class="MuiTypography-root-117 makeStyles-textCenter-229 MuiTypography-body1-119"
                      >
                        test
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                    >
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120 MuiTypography-colorTextSecondary-143"
                          >
                            Your Balance
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-231 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120"
                          >
                            50
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120 MuiTypography-colorTextSecondary-143"
                          >
                            Remaining
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-231 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120"
                          >
                            50/50
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120 MuiTypography-colorTextSecondary-143"
                          >
                            Redemption Value (bDIGG)
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-231 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120"
                          >
                            0.00000
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120 MuiTypography-colorTextSecondary-143"
                          >
                            Redemption Value ($)
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-231 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-117 MuiTypography-caption-120"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
                      >
                        <button
                          class="MuiButtonBase-root-220 MuiButton-root-191 MuiButton-contained-199 makeStyles-redeemButton-228 MuiBox-root-245 MuiBox-root-246 MuiButton-containedPrimary-200"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label-192"
                          >
                            Redeem
                          </span>
                          <span
                            class="MuiTouchRipple-root-247"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly without connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-115"
        >
          <div
            class="makeStyles-headerContent-116"
          >
            <h6
              class="MuiTypography-root-117 MuiTypography-h6-127 MuiTypography-colorTextPrimary-142"
            >
              DIAMOND HANDS
            </h6>
            <p
              class="MuiTypography-root-117 MuiTypography-body2-118 MuiTypography-colorTextSecondary-143"
            >
              MEME Honeypot pt. II
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-148 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-152 makeStyles-mainPapers-149 MuiPaper-elevation0-155 MuiPaper-rounded-153"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-117 MuiTypography-body1-119"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <button
                    class="MuiButtonBase-root-209 MuiButton-root-180 MuiButton-contained-188 makeStyles-redeemButton-150 MuiButton-containedPrimary-189"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-181"
                    >
                      Check Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-212"
                    />
                  </button>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-209 MuiButton-root-180 MuiButton-text-182 makeStyles-learnMore-151 MuiButton-textPrimary-183 MuiButton-textSizeSmall-195 MuiButton-sizeSmall-201 MuiButton-fullWidth-203"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-181"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-212"
              />
            </a>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
